@@ -1,11 +1,15 @@
 package webserver.model;
 
 import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import util.HttpRequestUtils;
+import util.IOUtils;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -16,10 +20,13 @@ public class HttpRequest {
     private static final int INDEX_OF_URL_QUERY_STRING = 1;
     private static final String queryStringRegex = "\\?";
 
+    private static final Logger log = LoggerFactory.getLogger(HttpRequest.class);
+
     private final HttpMethod httpMethod;
     private final String url;
     private final Map<String, String> queryStrings;
     private final HttpHeaders headers;
+    private final HttpRequestParams requestParams;
 
     public HttpRequest(BufferedReader br) throws IOException {
         String[] requestLine = splitRequestLine(br.readLine());
@@ -27,12 +34,17 @@ public class HttpRequest {
 
         String[] requestUrl = splitRequestUrl(requestLine[INDEX_OF_URL]);
         this.url = requestUrl[INDEX_OF_URL_PATH];
-        this.queryStrings = requestUrl.length > 1 ? parseQueryStrings(URLDecoder.decode(requestUrl[INDEX_OF_URL_QUERY_STRING], "UTF-8")) : new HashMap<>();
+        this.queryStrings = requestUrl.length > 1 ? parseQueryStrings(URLDecoder.decode(requestUrl[INDEX_OF_URL_QUERY_STRING], StandardCharsets.UTF_8)) : new HashMap<>();
 
         this.headers = parseHttpHeader(br);
+        this.requestParams = parseHttpRequestParams(br);
+        log.info("request params : {}", requestParams);
     }
 
     private String[] splitRequestLine(String requestLine) {
+        if (StringUtils.isEmpty(requestLine)) {
+            throw new IllegalArgumentException("잘못된 요청입니다.");
+        }
         return requestLine.split(StringUtils.SPACE);
     }
 
@@ -44,8 +56,9 @@ public class HttpRequest {
         HttpHeaders headers = new HttpHeaders();
         String line = br.readLine();
         while (!StringUtils.isEmpty(line)) {
+            log.info(line);
             HttpRequestUtils.Pair pair = HttpRequestUtils.parseHeader(line);
-            headers.addHeaders(pair.getKey(), pair.getKey());
+            headers.addHeaders(pair.getKey(), pair.getValue());
             line = br.readLine();
         }
         return headers;
@@ -53,6 +66,11 @@ public class HttpRequest {
 
     private Map<String, String> parseQueryStrings(String queryStrings) {
         return HttpRequestUtils.parseQueryString(queryStrings);
+    }
+
+    private HttpRequestParams parseHttpRequestParams(BufferedReader br) throws IOException {
+        String requestParams = IOUtils.readData(br, headers.getContentLength());
+        return new HttpRequestParams(HttpRequestUtils.parseQueryString(URLDecoder.decode(requestParams, StandardCharsets.UTF_8)));
     }
 
     public HttpMethod getHttpMethod() {
@@ -66,4 +84,9 @@ public class HttpRequest {
     public Map<String, String> getQueryStrings() {
         return queryStrings;
     }
+
+    public HttpRequestParams getRequestParams() {
+        return requestParams;
+    }
+
 }
